salesforce/esign-pilot/force-app/main/default/objects/Opportunity/fields/Coastal_Esign_File_Id__c.field-meta.xml
<CustomField><fullName>Coastal_Esign_File_Id__c</fullName><label>Coastal E-Sign Signed File</label><length>18</length><type>Text</type></CustomField>