salesforce/esign-pilot/force-app/main/default/objects/Opportunity/fields/Coastal_Esign_Packet_Id__c.field-meta.xml
<CustomField><fullName>Coastal_Esign_Packet_Id__c</fullName><label>Coastal E-Sign Packet</label><length>80</length><type>Text</type></CustomField>