salesforce/esign-pilot/force-app/main/default/objects/Opportunity/fields/Coastal_Esign_Status__c.field-meta.xml
<CustomField><fullName>Coastal_Esign_Status__c</fullName><label>Coastal E-Sign Status</label><length>40</length><type>Text</type></CustomField>